Corrected text overrun on Unsplash buttons on smaller screen sizes + reduced audio sound level to 0.5

--- a/src/components/SoundClip.css
+++ b/src/components/SoundClip.css
@@ -1,4 +1,4 @@
-button {
+.music-play {
   border-radius: 15px !important;
   color: black !important;
   border: 2px ridge  #ffffff !important;
